--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,6 +37,8 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
+    "pythonTestExplorer.testFramework": "pytest",
+    "python.testing.autoTestDiscoverOnSaveEnabled": true,
     "python.analysis.diagnosticMode": "workspace",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
@@ -61,6 +63,7 @@
     "shardulm94.trailing-spaces",
     "oderwat.indent-rainbow",
     "2gua.rainbow-brackets",
-    "littlefoxteam.vscode-python-test-adapter"
+    "littlefoxteam.vscode-python-test-adapter",
+    "ms-python.vscode-pylance"
   ]
 }
